--- a/index.html
+++ b/index.html
@@ -643,17 +643,23 @@
       <div class="section-card">
         <div class="grid">
           <div class="sub-card">
-            <img src="https://images.unsplash.com/photo-1550751827-4bd374c3f58b?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=600&q=80" alt="Threat Detection">
+            <div style="text-align: center; margin-bottom: 1rem;">
+              <img src="https://cdn-icons-png.flaticon.com/512/1055/1055687.png" alt="Threat Detection" style="height: 80px; width: auto;">
+            </div>
             <h3>Threat Detection System</h3>
             <p>Python-based threat intelligence system using open-source feeds and machine learning algorithms to detect potential security threats.</p>
           </div>
           <div class="sub-card">
-            <img src="https://images.unsplash.com/photo-1627398242454-45a1465c2479?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=600&q=80" alt="AWS Automation">
+            <div style="text-align: center; margin-bottom: 1rem;">
+              <img src="https://upload.wikimedia.org/wikipedia/commons/9/93/Amazon_Web_Services_Logo.svg" alt="AWS Automation" style="height: 50px; width: auto;">
+            </div>
             <h3>AWS Automation</h3>
             <p>Automated EC2 backup and monitoring system using AWS CLI, Lambda functions, and CloudWatch for efficient cloud resource management.</p>
           </div>
           <div class="sub-card">
-            <img src="https://images.unsplash.com/photo-1586282391129-76a746c25d56?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=600&q=80" alt="Timetable System">
+            <div style="text-align: center; margin-bottom: 1rem;">
+              <img src="https://cdn-icons-png.flaticon.com/512/3652/3652191.png" alt="Timetable System" style="height: 80px; width: auto;">
+            </div>
             <h3>Timetable Management System</h3>
             <p>Web-based timetable management system for educational institutions with SQL database backend and responsive frontend interface.</p>
           </div>
