--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Aditya Kumar | Cybersecurity Expert, Threat Intelligence & Cloud Specialist</title>
+  <title>Aditya Kumar | Cybersecurity Enthusiast, Threat Intelligence & Cloud Learner</title>
   <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;500;600&family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <style>
@@ -690,8 +690,8 @@
           <h1>
             <span class="typewriter">Hello World!</span><br>
             I'm <span class="accent">Aditya Kumar</span><br>
-            <span class="secondary">Cybersecurity Expert</span><br>
-            <span class="tertiary">Threat Intelligence & Cloud Specialist</span>
+            <span class="secondary">Cybersecurity Enthusiast</span><br>
+            <span class="tertiary">Threat Intelligence & Cloud Learner</span>
           </h1>
           <p>
             With expertise in AWS, SQL, Threat Intelligence, and Networking with a strong background in Linux and Cybersecurity.
