--- a/index.html
+++ b/index.html
@@ -299,8 +299,8 @@
     }
 
     .profile-image {
-      width: 600px; /* Increased from 500px */
-      height: 720px; /* Increased from 600px */
+      width: 600px;
+      height: 720px;
       object-fit: cover;
       border: 3px solid var(--accent);
       box-shadow: 0 0 15px var(--shadow);
@@ -1036,6 +1036,7 @@
       <a href="#education">Education</a>
       <a href="#skills">Skills</a>
       <a href="#projects">Projects</a>
+      <a href="#certifications">Certifications</a>
       <a href="#contact">Contact</a>
     </div>
     <button class="toggle-btn" onclick="toggleTheme()">
@@ -1248,6 +1249,39 @@
     </div>
   </section>
 
+  <!-- Certifications Section -->
+  <section id="certifications">
+    <div class="container">
+      <div class="section-header">
+        <h2>Certifications</h2>
+      </div>
+      <div class="section-card">
+        <div class="grid">
+          <div class="sub-card">
+            <h3><i class="fas fa-shield-alt"></i> Cyber Threat Intelligence (Foundation Level)</h3>
+            <p>ArcX</p>
+            <p class="date"><i class="far fa-calendar-alt"></i> Issued on September 29, 2024</p>
+          </div>
+          <div class="sub-card">
+            <h3><i class="fas fa-cloud"></i> AWS Cloud Practitioner Essentials</h3>
+            <p>AWS</p>
+            <p class="date"><i class="far fa-calendar-alt"></i> Completed on September 22, 2024</p>
+          </div>
+          <div class="sub-card">
+            <h3><i class="fas fa-laptop-code"></i> Cybersecurity Threat Vectors and Mitigation</h3>
+            <p>Microsoft via Coursera</p>
+            <p class="date"><i class="far fa-calendar-alt"></i> Completed on September 13, 2024</p>
+          </div>
+          <div class="sub-card">
+            <h3><i class="fas fa-satellite"></i> ISRO E-Learning Program Certificate</h3>
+            <p>ISRO</p>
+            <p class="date"><i class="far fa-calendar-alt"></i> Issued on January 13, 2025</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <!-- Contact Section -->
   <section id="contact">
     <div class="container">
@@ -1325,6 +1359,7 @@
       <a href="#education">Education</a>
       <a href="#skills">Skills</a>
       <a href="#projects">Projects</a>
+      <a href="#certifications">Certifications</a>
       <a href="#contact">Contact</a>
     </div>
     <div class="social-links" style="justify-content: center; margin-top: 1.5rem;">
